--- a/Mikrodatenanalyse_Workflow.Rmd
+++ b/Mikrodatenanalyse_Workflow.Rmd
@@ -70,7 +70,7 @@ Ein effizienter Workflow beginnt bei einer effizienten Ordnerstruktur. Dabei sol
 library(fs)
 fs::dir_tree("Beispielordner_Mikrodatenanalyse", recurse = TRUE)
 ```
-Der Projektordner <tt> Beispielordner_Mikrodatenanalyse </tt> enthält alle relevanten Dateien. In der ersten Ebene liegt die .Rproj-Datei (<tt>Projekt_Mikrodatenanalyse.Rproj</tt>), .R-Dateien und Unterordner.
+Der Projektordner <code> Beispielordner_Mikrodatenanalyse </code> enthält alle relevanten Dateien. In der ersten Ebene liegt die .Rproj-Datei (<code>Projekt_Mikrodatenanalyse.Rproj</code>), .R-Dateien und Unterordner.
 
 Ausgehend vom Projektordner, in dem die .Rproj-Datei liegt, können beliebige Unterordner gebildet werden. Alternativ zur obigen Struktur könnten die .R-Dateien auch in einen eigenen Ordner verschoben werden.
 
@@ -94,7 +94,7 @@ Mikrodaten werden in der Regel (noch) nicht in einem R-Datenformat ausgeliefert.
 
 ###Lösung: 
 
-Das Paket <tt>haven</tt> ermöglicht das Einlesen *fremder* Dateitypen.
+Das Paket <code>haven</code> ermöglicht das Einlesen *fremder* Dateitypen.
 
 ```{r haven_installieren, eval = FALSE}
 #Einmalig installieren
@@ -106,7 +106,7 @@ install.packages("haven")
 library(haven)
 ```
 
-Das Paket bietet verschiedene Funktionen, um fremde Dateiformate einzulesen, und diese zu speichern. Stata oder SPSS-Nutzer sind zudem die Arbeit mit *Labeln* gewohnt. In R wird dies standardmäßig nicht unterstützt. <tt>haven</tt> enthält verschiedene Funktionen, um Label zu definieren, ändern, löschen, usw.:
+Das Paket bietet verschiedene Funktionen, um fremde Dateiformate einzulesen, und diese zu speichern. Stata oder SPSS-Nutzer sind zudem die Arbeit mit *Labeln* gewohnt. In R wird dies standardmäßig nicht unterstützt. <code>haven</code> enthält verschiedene Funktionen, um Label zu definieren, ändern, löschen, usw.:
 
 ```{r}
 #Liste aller Funktionen im Paket haven
@@ -115,7 +115,7 @@ ls("package:haven")
 
 Bei der Arbeit mit Mikrodatensätzen liegt die erste Hürde im Zusammentragen der Datensätze. Beispielhaft soll dies anhand dreier Datensätze demonstriert werden. Die Datensätze basieren auf dem frei zugänglichen [SOEP-Übungsdatensatz](https://www.diw.de/de/diw_02.c.222838.de/soep_in_der_lehre.html). Dieser wurde um weitere Variablen ergänzt und für einen realistischeren Anwendungsfall aufgesplittet. Die Variablen sind verfremdet, beziehungsweise auf Zufallsbasis erstellt.
 
-Für unsere Mikrodatenanalyse nutzen wir drei Datensätze:  <tt>ppathl.dta</tt>, <tt>pl.sav</tt>, <tt>phealth.dta</tt>. Wir lesen diese mit den Befehlen <tt>read_dta()</tt> beziehungsweise <tt>read_sav()</tt> aus dem Paket <tt>haven</tt> ein.
+Für unsere Mikrodatenanalyse nutzen wir drei Datensätze:  <code>ppathl.dta</code>, <code>pl.sav</code>, <code>phealth.dta</code>. Wir lesen diese mit den Befehlen <code>read_dta()</code> beziehungsweise <code>read_sav()</code> aus dem Paket <code>haven</code> ein.
 
 
 ```{r}
@@ -129,11 +129,11 @@ ppathl
 pl
 phealth
 ```
-Ein Teil der Variablen ist vom Typ <tt>haven_labelled</tt>, angezeigt durch <tt><dbl+lbl></tt>. Für Statanutzer ist dies nichts Neues. Dies bedeutet lediglich, dass die Variablen neben dem eigentlichen Variablennamen noch eine Kurzbeschreibung tragen. <tt><dbl+lbl></tt> zeigt an, dass die Variable numerisch ist (<tt><dbl></tt>) und ein Label trägt <tt><+lbl></tt>.
+Ein Teil der Variablen ist vom Typ <code>haven_labelled</code>, angezeigt durch <code><dbl+lbl></code>. Für Statanutzer ist dies nichts Neues. Dies bedeutet lediglich, dass die Variablen neben dem eigentlichen Variablennamen noch eine Kurzbeschreibung tragen. <code><dbl+lbl></code> zeigt an, dass die Variable numerisch ist (<code><dbl></code>) und ein Label trägt <code><+lbl></code>.
 
-Um die drei Datensätze zusammenzufügen nutzen wir die beiden Matching-Variablen <tt>persnr</tt> und <tt>jahr</tt>.
+Um die drei Datensätze zusammenzufügen nutzen wir die beiden Matching-Variablen <code>persnr</code> und <code>jahr</code>.
 
-Optional: Standardmäßig zeigt R keine Änderungen an Datensätzen in der Konsole an. Wer gerne Feedback für Datenmanipulationen und auch Mergevorgänge möchte, der kann hierfür das Paket <tt>tidylog</tt> nutzen. Das Paket bietet Informationen für eine Vielzahl an Datenmanipulationsfunktionen aus dem tidyverse.
+Optional: Standardmäßig zeigt R keine Änderungen an Datensätzen in der Konsole an. Wer gerne Feedback für Datenmanipulationen und auch Mergevorgänge möchte, der kann hierfür das Paket <code>tidylog</code> nutzen. Das Paket bietet Informationen für eine Vielzahl an Datenmanipulationsfunktionen aus dem tidyverse.
 
 
 ```{r}
@@ -142,21 +142,31 @@ library(tidylog)
 ls("package:tidylog")
 ```
 
-Um Datensätze zusammenzuführen werden die <tt>Mutating Joins</tt>-Funktionen genutzt. Die vier Funktionen aus dem Paket <tt>dplyr</tt> welches Teil des <tt>tidyverse</tt> ist, sind:
+----
 
-* <tt>Neuer_Datensatz <- left_join(Datensatz1, Datensatz2, by = c("Matchingvariable1", "Matchingvariable2"))</tt>: Datensatz1 bleibt komplett erhalten und wird um Spalten von Datensatz2 ergänzt.
+## Datensätze zusammenführen
 
-* <tt>Neuer_Datensatz <- right_join(Datensatz1, Datensatz2, by = c("Matchingvariable1", "Matchingvariable2"))</tt>: Datensatz2 bleibt komplett erhalten und wird um Spalten von Datensatz1 ergänzt.
+![](images/Joins_1.png)
 
-* <tt>Neuer_Datensatz <- inner_join(Datensatz1, Datensatz2, by = c("Matchingvariable1", "Matchingvariable2"))</tt>: Nur die Beobachtungen behalten, bei denen dieselben Matchingvariablen in beiden Datensätzen auftauchen.
+Um Datensätze zusammenzuführen werden die <code>Mutating Joins</code>-Funktionen genutzt. Die vier Funktionen aus dem Paket <code>dplyr</code> welches Teil des <code>tidyverse</code> ist, sind:
 
-* <tt>Neuer_Datensatz <- full_join(Datensatz1, Datensatz2, by = c("Matchingvariable1", "Matchingvariable2"))</tt>: Neuer Datensatz enthält sowohl Beobachtungen, die in beiden Datensätzen vorkommen als auch Einzelbeobachtungen, die nicht gematcht wurden.
+* <code>Neuer_Datensatz <- left_join(Datensatz1, Datensatz2, by = c("Matchingvariable1", "Matchingvariable2"))</code>: Datensatz1 bleibt komplett erhalten und wird um Spalten von Datensatz2 ergänzt.
 
-![](images/dplyr_join.png)
+* <code>Neuer_Datensatz <- right_join(Datensatz1, Datensatz2, by = c("Matchingvariable1", "Matchingvariable2"))</code>: Datensatz2 bleibt komplett erhalten und wird um Spalten von Datensatz1 ergänzt.
+
+* <code>Neuer_Datensatz <- inner_join(Datensatz1, Datensatz2, by = c("Matchingvariable1", "Matchingvariable2"))</code>: Nur die Beobachtungen behalten, bei denen dieselben Matchingvariablen in beiden Datensätzen auftauchen.
+
+* <code>Neuer_Datensatz <- full_join(Datensatz1, Datensatz2, by = c("Matchingvariable1", "Matchingvariable2"))</code>: Neuer Datensatz enthält sowohl Beobachtungen, die in beiden Datensätzen vorkommen als auch Einzelbeobachtungen, die nicht gematcht wurden.
+
+![](images/Joins_2.png)
 
 Quelle: [Data Wrangling Cheat Sheet]("https://rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf")
 
-Bei der Arbeit mit Mikrodatensätzen beginnt man in der Regel mit einem Basisdatensatz, in unserem Fall <tt>ppathl</tt>. Dieser enthält in der Regel alle Beobachtungen. Aufbauend auf diesem Datensatz werden weitere Informationen hinzugefügt. Wir wissen also, dass wir an  <tt>ppathl</tt> alle anderen Datensätze dranspielen können. In unserem finalen Datensatz sind alle Zeilen aus <tt>ppathl</tt> enthalten, ergänzt um weitere Variablen aus den anderen Datensätzen. Wir nutzen also den <tt>left_join</tt>. 
+----
+
+##Reihenfolge des Zusammenfügens bei Mikrodatensätzen
+
+Bei der Arbeit mit Mikrodatensätzen beginnt man in der Regel mit einem Basisdatensatz, in unserem Fall <code>ppathl</code>. Dieser enthält in der Regel alle Beobachtungen. Aufbauend auf diesem Datensatz werden weitere Informationen hinzugefügt. Wir wissen also, dass wir an  <code>ppathl</code> alle anderen Datensätze dranspielen können. In unserem finalen Datensatz sind alle Zeilen aus <code>ppathl</code> enthalten, ergänzt um weitere Variablen aus den anderen Datensätzen. Wir nutzen also den <code>left_join</code>. 
 
 Um einen Arbeitsdatensatz aus mehreren Datensätzen zu erstellen, kann man schrittweise vorgehen:
 
@@ -182,7 +192,7 @@ library(waldo)
 waldo::compare(arbeitsdatensatz, arbeitsdatensatz_mit_zwischenschritt)
 ```
 
-An dieser Stelle bietet es sich an, den Arbeitsdatensatz oder vielleicht sogar alle bisher geladenen und erstellten Objekte (z.B. Datensätze) abzuspeichern. Mit <tt>saveRDS</tt> kann ein einzelnes R-Objekt gespeichert werden. <tt>readRDS</tt> lädt dieses ein.
+An dieser Stelle bietet es sich an, den Arbeitsdatensatz oder vielleicht sogar alle bisher geladenen und erstellten Objekte (z.B. Datensätze) abzuspeichern. Mit <code>saveRDS</code> kann ein einzelnes R-Objekt gespeichert werden. <code>readRDS</code> lädt dieses ein.
 
 ```{r}
 # Einzelnes Objekt speichern:
@@ -192,7 +202,7 @@ arbeitsdatensatz <- readRDS("arbeitsdatensatz.rds")
 ```
 
 
-Sollen alle bisher erstellten Obejekte gespeichert werden, geschieht dies mit <tt>save.image</tt>. Geladen wird mit dem Befehl <tt>load</tt>.
+Sollen alle bisher erstellten Obejekte gespeichert werden, geschieht dies mit <code>save.image</code>. Geladen wird mit dem Befehl <code>load</code>.
 
 ```{r}
 # Gesamten Workspace speichern:
@@ -200,3 +210,24 @@ save.image(file = "arbeitsdatensatz.RData")
 # Und wieder laden
 load("arbeitsdatensatz.RData")
 ```
+
+----
+
+##Analyse von Mikrodaten
+
+Die große Anzahl an Beobachtungen kann die (effiziente) Visualisierung von Mikrodaten erschweren und einige Visualisierungsformen bieten sich mehr an als andere. Entscheidend ist der Datentyp, der visualisiert werden soll.
+
+Sollen lediglich aggregierte Werte, wie beispielsweise Mittelwerte, Quantile und Dispersionsmaße dargestellt werden, unterscheidet sich die Datenvisualisierung von Mikrodaten nicht von der von anderen Daten. Lediglich bei der Datenanalyse muss auf die Gewichtung der Daten geachtet werden.
+
+###Gewichte (Hochrechnungsfaktoren)
+Der Umgang mit Häufigkeitsgewichten ist in <code>R</code> etwas anders als in anderen
+
+```{r}
+# arbeitsdatensatz %>%
+#   filter(jahr == 2004) %>%
+#   mutate(test = sum(income*weight)/sum(weight)) %>%
+#   mutate(test2 = weighted.mean(income, w = weight))
+```
+
+
+
